--- a/frontend/dashboard/src/app/sea-export/sea-export.component.scss
+++ b/frontend/dashboard/src/app/sea-export/sea-export.component.scss
@@ -50,7 +50,7 @@ kt-base {
 .frt-mng-das {
 
 	.das-ml-0 { margin-left: 0px !important; }
-	.frt-das-port  { padding: 20px !important; }
+	.frt-das-port  { padding: 5px 0px !important; }
 	.frt-das-port-cen { padding: 5px 10px 5px 10px !important; }
  
 	  .kt-portlet {
