--- a/frontend/dashboard/src/app/layout/layout.component.html
+++ b/frontend/dashboard/src/app/layout/layout.component.html
@@ -22,79 +22,13 @@
                     <!-- end:: Content Head -->
 
                     <!-- begin:: Content Body -->
-                    <!--<div class="form-row das-ml-0">
-                        <div class="col-lg-12">
-                            <div class="form-row row">
-                                <div class="col-lg-4 col-md-12 mb-1">
-                                    <div class="kt-portlet frt-das-port">
-                                        <div class="kt-portlet-body">
-                                            <div class="kt-portlet-preview">
-                                                
-                                                    <div class="col-lg-12 relative">
-                                                        
-                                                            <h4 id="ribbon"></h4>
-                                                        
-                                                    </div> 
-                                                                                                           
-                                                        <highcharts-chart #chart1 [Highcharts]="Highcharts1"  [options]="chartOptions1"
-                                                            style="width: 90%; height:292px !important; display: block;">
-                                                        </highcharts-chart>
-                                                   
-                                                
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-12 mb-1">
-                                    <div class="kt-portlet frt-das-port-cen">
-                                        <div class="kt-portlet-body">
-                                            <div class="kt-portlet-preview">
-                                                
-                                                <div class="col-lg-12 relative">
-                                                    
-                                                        <h4 id="ribbon"></h4>
-                                                    
-                                                </div>
-                                                <div class="col-lg-12">
-                                                    <highcharts-chart [Highcharts]="Highcharts2" [options]="chartOptions2"
-                                                        style="width: 90%; height:292px !important; display: block;">
-                                                    </highcharts-chart>
-                                                </div>
-                                                
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-12 mb-1">
-                                    <div class="kt-portlet frt-das-port-cen">
-                                        <div class="kt-portlet-body">
-                                            <div class="kt-portlet-preview">
-                                                
-                                                <div class="col-lg-12 relative">
-                                                    
-                                                        <h4 id="ribbon"></h4>
-                                                    
-                                                </div>
-                                                <div class="col-lg-12">
-                                                    <highcharts-chart [Highcharts]="Highcharts3" [options]="chartOptions3"
-                                                        style="width: 90%; height:292px !important; display: block;">
-                                                    </highcharts-chart>
-                                                </div>
-                                                
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                        </div>
-                    </div> -->
+                    
                     <router-outlet></router-outlet>
                     <!-- end:: Content Body -->
                 </div>
                 <!-- end:: Content -->
 
-                <!--<app-footer></app-footer>-->
+                <app-footer></app-footer>
             </div>
         </div>
     </div>
