--- a/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
@@ -1,52 +1,193 @@
 <div class="kt-subheader my-0-7-2">
     <div class="kt-container kt-cntr-plr-13">
         <div class="kt-subheader__main kt-sub-hd-p-0">
-            <h3 class="kt-subheader__title">Sea Dashboard Export</h3>
+            <h3 class="kt-subheader__title">Sea Export</h3>
         </div>
     </div>
 </div>
-<div class="form-row">
-    <div class="col-md-12 mb-0-2">
-        <div class="kt-portlet px-3 pt-2 pb-0">
-            <div class="kt-portlet-body">
-                <div class="kt-portlet-preview">
-                    <form autocomplete="off">
-                        <div class="form-row">
-                            <div class="col-lg-1"></div>
-                            
-                            <div class="container home-dashboard">
-                                <div class="row">
-                                    <div class="col-md-4 col-sm-20">
-                                        <button class="btn btn-lg crm_search"
-                                                        type="button">EXPORT Sales Support</button>
-                                        <div class="box-shadow">
-                                            
-                                            <fieldset class="ss-crm-fieldset">                                                
-                                                <div  aria-label="Basic outlined example" class="btn-group" role="group">
-                                                    <button class="btn btn-lg btn-outline-primary " type="button"><span><i aria-hidden="true" class="fa fa-usd"></i></span>
-                                                        Unapproved Quotation </button>
-                                                    <button class="btn btn-lg btn-outline-primary" type="button"><span><i aria-hidden="true" class="fa fa-usd"></i></span>
-                                                        Approved Quotation List </button>
-                                                </div>
-                                            </fieldset>
+<div class="frt-mng-das">
+    <!--<div class="form-row">-->
+        <div class="col-md-12 mb-0-2">
+            <div class="kt-portlet frt-das-port">
+                <div class="kt-portlet-body">
+                    <div class="kt-portlet-preview">
+                        <form autocomplete="off">
+                            <div class="form-row">
+                                <div class="container frt-opr-mng-dashboard">
+                                    <div class="row">
+                                        <div class="col-md-6 mb-0-2">
+                                            <mat-expansion-panel [expanded]="true" >
+                                                <mat-expansion-panel-header>
+                                                    <mat-panel-title class="title-class">
+
+                                                        EXPORT Sales Support
+                                                    </mat-panel-title>
+                                                </mat-expansion-panel-header>
+
+                                                <mat-table [dataSource]="dataSource">
+
+
+                                                    <ng-container matColumnDef="pendinActions">
+                                                        <mat-header-cell *matHeaderCellDef>Pending
+                                                            Actions</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element">{{ element.name
+                                                            }}</mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="count">
+                                                        <mat-header-cell *matHeaderCellDef>Count</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.count}}</a></mat-cell>
+                                                    </ng-container>                                                    
+
+                                                    <mat-header-row
+                                                        *matHeaderRowDef="displayedColumns"></mat-header-row>
+                                                    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                                                </mat-table>
+                                            </mat-expansion-panel>
+                                        </div>                                    
+                                    
+                                        <div class="col-md-6 mb-0-2">
+                                            <!--<mat-accordion class="example-headers-align" multi>-->
+                                            <mat-expansion-panel [expanded]="true" >
+                                                <mat-expansion-panel-header>
+                                                    <mat-panel-title class="title-class">
+                                                        EXPORT CUSTOMER SERVICE (LCL)
+                                                    </mat-panel-title>
+                                                </mat-expansion-panel-header>
+                                                <mat-table [dataSource]="dataSource1">
+
+
+                                                    <ng-container matColumnDef="pendinActions">
+                                                        <mat-header-cell *matHeaderCellDef>Pending
+                                                            Actions</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element">{{ element.name
+                                                            }}</mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="count">
+                                                        <mat-header-cell *matHeaderCellDef>Count</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.count}}</a></mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="countSLA">
+                                                        <mat-header-cell *matHeaderCellDef>Count within SLA</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.countSLA}}</a></mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="countOSLA">
+                                                        <mat-header-cell *matHeaderCellDef>Count - Out of SLA</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.countOSLA}}</a></mat-cell>
+                                                    </ng-container>
+
+                                                    <mat-header-row
+                                                        *matHeaderRowDef="displayedColumnsSLA"></mat-header-row>
+                                                    <mat-row *matRowDef="let row; columns: displayedColumnsSLA;"></mat-row>
+                                                </mat-table>
+                                            </mat-expansion-panel>
+                                            <!--</mat-accordion> -->
                                         </div>
-                                        
+                                    </div>
+                                    <div class="col-lg-12"></div>
+                                    <div class="row">
+                                          
+                                        <div class="col-md-6 mb-0-2">
+                                            <!--<mat-accordion>-->
+                                            <mat-expansion-panel [expanded]="true" >
+                                                <mat-expansion-panel-header>
+                                                    <mat-panel-title class="title-class">
+                                                        EXPORT CUSTOMER SERVICE (FCL)
+                                                    </mat-panel-title>
+                                                </mat-expansion-panel-header>
+                                                <mat-divider></mat-divider>
+                                                <mat-table [dataSource]="dataSource2">
+
+
+                                                    <ng-container matColumnDef="pendinActions">
+                                                        <mat-header-cell *matHeaderCellDef>Pending
+                                                            Actions</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element">{{ element.name
+                                                            }}</mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="count">
+                                                        <mat-header-cell *matHeaderCellDef>Count</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.count}}</a></mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="countSLA">
+                                                        <mat-header-cell *matHeaderCellDef>Count within SLA</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.countSLA}}</a></mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="countOSLA">
+                                                        <mat-header-cell *matHeaderCellDef>Count - Out of SLA</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.countOSLA}}</a></mat-cell>
+                                                    </ng-container>
+
+                                                    <mat-header-row
+                                                        *matHeaderRowDef="displayedColumnsSLA"></mat-header-row>
+                                                    <mat-row *matRowDef="let row; columns: displayedColumnsSLA;"></mat-row>
+                                                </mat-table>
+                                            </mat-expansion-panel>
+                                            <!--</mat-accordion>-->
+                                        </div>                                    
+                                           
+                                        <div class="col-md-6 mb-0-2">
+                                            <!-- <mat-accordion>-->
+                                            <mat-expansion-panel [expanded]="true" >
+                                                <mat-expansion-panel-header>
+                                                    <mat-panel-title class="title-class">
+                                                        EXPORT DOCUMENTATION
+                                                    </mat-panel-title>
+                                                </mat-expansion-panel-header>
+                                                <mat-table [dataSource]="dataSource3">
+
+
+                                                    <ng-container matColumnDef="pendinActions">
+                                                        <mat-header-cell *matHeaderCellDef>Pending
+                                                            Actions</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element">{{ element.name
+                                                            }}</mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="count">
+                                                        <mat-header-cell *matHeaderCellDef>Count</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.count}}</a></mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="countSLA">
+                                                        <mat-header-cell *matHeaderCellDef>Count within SLA</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.countSLA}}</a></mat-cell>
+                                                    </ng-container>
+
+                                                    <ng-container matColumnDef="countOSLA">
+                                                        <mat-header-cell *matHeaderCellDef>Count - Out of SLA</mat-header-cell>
+                                                        <mat-cell *matCellDef="let element"><a
+                                                                href="/sea-export">{{element.countOSLA}}</a></mat-cell>
+                                                    </ng-container>
+                                                    <mat-header-row
+                                                        *matHeaderRowDef="displayedColumnsSLA"></mat-header-row>
+                                                    <mat-row *matRowDef="let row; columns: displayedColumnsSLA;"></mat-row>
+                                                </mat-table>
+                                            </mat-expansion-panel>
+                                        </div>
                                     </div>
                                     
                                 </div>
-                                                               
                             </div>
-                            <div class="grid-container">
-                                <div class="item1 rcorners1">Header</div>
-                                <div class="item2">Menu</div>
-                                <div class="item3">Main</div>  
-                                <div class="item4">Right</div>
-                                <div class="item5">Footer</div>
-                              </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    <!--</div>-->
 </div>
