--- a/frontend/dashboard/src/app/landing-page/landing-page.component.scss
+++ b/frontend/dashboard/src/app/landing-page/landing-page.component.scss
@@ -1,22 +1,4 @@
-
-  mat-grid-tile {
-    background: #f3f4f5;
-  }
-
-  .example-action-buttons {
-    padding-bottom: 20px;
-  }
-  
-  .example-headers-align .mat-expansion-panel-header-description {
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .example-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
-    margin-left: 8px;
-  }
-
-  @import './../../../../assets/scss/crm/crm-common.scss';
+@import './../../assets/scss/crm/crm-common.scss';
 
 :host {
 	::ng-deep {
@@ -30,17 +12,15 @@
 .frt-mng-das {
 
 	.das-ml-0 { margin-left: 0px !important; }
-	.frt-das-port  { padding: 20px !important; }
+	.frt-das-port  { height: 87vh; padding: 20px !important; }
 	.frt-das-port-cen { padding: 5px 10px 5px 10px !important; }
  
 	  .kt-portlet {
 		  box-shadow: 0 1px 5px 0 rgba(111,111,111,.5) !important;
-		  margin: 4px 10px 0px !important;      
+		  margin: 4px 10px 0px !important;
 
 		  		.container{
             max-width: 99% !important;
-            height: Calc(100% - 120px);
-            min-height:61.6vh;
           }	
 	  }
 	  
@@ -66,29 +46,4 @@
 	
   }
 	
-}
-
-mat-grid-tile {
-    background: lightblue;
-  }
-
-.title-class {
-    color: blue;
-}
-
-table{
-    width: 100%;
-   }
-
-.mat-column-count {
-    flex: 0 0 20%;
-    width: 20% !important;
-}
-.mat-column-countSLA {
-    flex: 0 0 20%;
-    width: 20% !important;
-}
-.mat-column-countOSLA {
-    flex: 0 0 20%;
-    width: 20% !important;
 }
