--- a/frontend/dashboard/src/styles.scss
+++ b/frontend/dashboard/src/styles.scss
@@ -1640,6 +1640,8 @@ input[readonly] ,input[disabled],button[disabled] {
 .kt-portlet { 
     border-radius: 0px !important;
     margin-bottom: 0px !important;
+    height: 100%;
+    min-height: 100%;
     // box-shadow: 0px 0px 5px 0px rgba(3, 96, 166, 0.4) !important;
     // box-shadow: 0px 0px 3px 0px rgba(3, 96, 166,0.8) !important;
 }
