--- a/frontend/dashboard/src/app/landing-page/landing-page.component.html
+++ b/frontend/dashboard/src/app/landing-page/landing-page.component.html
@@ -3,14 +3,18 @@
         <div class="kt-portlet frt-das-port">
             <div class="kt-portlet-body">
                 <div class="kt-portlet-preview"> -->
-                    <mat-tab-group>
-                        <mat-tab label="Sea Export" *ngIf="isProductMatching('SE')"><app-sea-dashboard></app-sea-dashboard></mat-tab>
-                        <mat-tab label="Sea Import" *ngIf="isProductMatching('SI')"><app-sea-import-dashboard></app-sea-import-dashboard> </mat-tab>
-                        <mat-tab label="Air Export" *ngIf="isProductMatching('AE')"> Air Export </mat-tab>
-                        <mat-tab label="Air Import" *ngIf="isProductMatching('AI')"> Air Import </mat-tab>
+                    <div class="container">
+                        <app-sidebar ></app-sidebar>
+                        <router-outlet></router-outlet>
+                      </div>
+                    <!-- <mat-tab-group>
+                        <mat-tab label="Sea Export"><app-sea-dashboard></app-sea-dashboard></mat-tab>
+                        <mat-tab label="Sea Import"><app-sea-import-dashboard></app-sea-import-dashboard> </mat-tab>
+                        <mat-tab label="Air Export"> Air Export </mat-tab>
+                        <mat-tab label="Air Import"> Air Import </mat-tab>
 
-                    </mat-tab-group>
-                    <router-outlet></router-outlet>
+                    </mat-tab-group> -->
+                    <!-- <router-outlet></router-outlet> -->
                 <!-- </div>
             </div>
         </div>
