--- a/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.scss
+++ b/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.scss
@@ -92,3 +92,9 @@ table{
     flex: 0 0 20%;
     width: 20% !important;
 }
+
+.mat-expansion-panel {
+  height: 300px;
+  overflow: auto;
+  top: 0;
+}
