--- a/frontend/dashboard/src/app/sidebar/sidebar.component.html
+++ b/frontend/dashboard/src/app/sidebar/sidebar.component.html
@@ -1,34 +1,33 @@
-<div class="sidebar" role="cdb-sidebar">
-  <div class="sidebar-container">
-    <div class="sidebar-header">
-      <a class="sidebar-brand">Contrast</a>
-      <a class="sidebar-toggler"><i class="fa fa-bars"></i></a>
-    </div>
-    <div class="sidebar-nav">
-      <div class="sidenav">
-        <a class="sidebar-item">
-          <div class="sidebar-item-content">
-            <i class="fa fa-th-large sidebar-icon sidebar-icon-lg"></i>
-            <span>Dashboard</span>
-            <div class="suffix">
-              <div class="badge rounded-pill bg-danger">new</div>
-            </div>
-          </div>
-        </a>
-        <a class="sidebar-item">
-          <div class="sidebar-item-content">
-            <i class="fa fa-sticky-note sidebar-icon"></i>
-            <span>Components</span>
-          </div>
-        </a>
-        <a class="sidebar-item">
-          <div class="sidebar-item-content">
-            <i class="fa fa-sticky-note sidebar-icon"></i>
-            <span>Bootstrap</span>
-          </div>
-        </a>
-      </div>
-      <div class="sidebar-footer">Sidebar Footer</div>
-    </div>
+<div>
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  />
+
+  <div
+    id="mySidebar"
+    class="sidebar"
+    (mouseover)="toggleSidebar()"
+    (mouseout)="toggleSidebar()"
+  >
+    <a href="/chart"
+      ><i class="material-icons">language </i
+      ><span class="icon-text">Frieght Forwarding</span></a
+    ><br />
+    <a href="/home"><i class="material-icons">home </i
+      ><span class="icon-text">Home Page</span></a
+    ><br />
+    <a href="/operations/dashboard"
+      ><i class="material-icons">spa</i><span class="icon-text"></span>Home
+      Dashboard</a
+    >
   </div>
+
+<div id="main">
+  <!-- <app-landing-page></app-landing-page> -->
+  <!-- <h2>Open/Collapse Sidebar on Hover</h2>
+  <p>Hover over any part of the sidebar to open the it.</p>
+  <p>To close the sidebar, move your mouse out of the sidebar.</p> -->
+  
 </div>
+<!-- <router-outlet></router-outlet> -->
