--- a/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.scss
+++ b/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.scss
@@ -1,94 +1,115 @@
+mat-grid-tile {
+  background: #f3f4f5;
+}
 
-  mat-grid-tile {
-    background: #f3f4f5;
-  }
+.example-action-buttons {
+  padding-bottom: 20px;
+}
 
-  .example-action-buttons {
-    padding-bottom: 20px;
-  }
-  
-  .example-headers-align .mat-expansion-panel-header-description {
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .example-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
-    margin-left: 8px;
-  }
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
 
-  @import './../../../../assets/scss/crm/crm-common.scss';
+.example-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
+  margin-left: 8px;
+}
+
+@import "./../../../../assets/scss/crm/crm-common.scss";
 
 :host {
-	::ng-deep {
-		ngb-tabset > .nav-tabs {
-			display: none;
-		}
-	}
+  ::ng-deep {
+    ngb-tabset > .nav-tabs {
+      display: none;
+    }
+  }
 }
-.top-hd { margin-left: 10px !important; margin-right: 10px !important; }
+.top-hd {
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+}
 
 .frt-mng-das {
+  .das-ml-0 {
+    margin-left: 0px !important;
+  }
+  .frt-das-port {
+    padding: 20px !important;
+  }
+  .frt-das-port-cen {
+    padding: 5px 10px 5px 10px !important;
+  }
 
-	.das-ml-0 { margin-left: 0px !important; }
-	.frt-das-port  { padding: 20px !important; }
-	.frt-das-port-cen { padding: 5px 10px 5px 10px !important; }
- 
-	  .kt-portlet {
-		  box-shadow: 0 1px 5px 0 rgba(111,111,111,.5) !important;
-		  margin: 4px 10px 0px !important;      
+  .kt-portlet {
+    box-shadow: 0 1px 5px 0 rgba(111, 111, 111, 0.5) !important;
+    margin: 4px 10px 0px !important;
 
-		  		.container{
-            max-width: 99% !important;
-            height: Calc(100% - 120px);
-            min-height:61.6vh;
-          }	
-	  }
-	  
-	  .frt-das-port-mr-0 { margin-right: 0px !important; }
-	  h5 {
-		  padding: 8px 10px 6px 20px;
-		  margin: -14px -14px 15px !important;
-		  font-size: 1.3rem!important;
-		  font-weight: 600!important;
-		  color: #fff!important;
-		  text-transform: capitalize;
-		  text-align: left !important;
-		  background-image: radial-gradient(circle farthest-corner at 49% 73%, #00aeef 0, #3f51b5 171%) !important;
-		  border-bottom: 1px solid #009dd8;
-	  }
+    .container {
+      max-width: 99% !important;
+      height: Calc(100% - 120px);
+      min-height: 61.6vh;
+    }
+  }
 
+  .frt-das-port-mr-0 {
+    margin-right: 0px !important;
+  }
+  h5 {
+    padding: 8px 10px 6px 20px;
+    margin: -14px -14px 15px !important;
+    font-size: 1.3rem !important;
+    font-weight: 600 !important;
+    color: #fff !important;
+    text-transform: capitalize;
+    text-align: left !important;
+    background-image: radial-gradient(
+      circle farthest-corner at 49% 73%,
+      #00aeef 0,
+      #3f51b5 171%
+    ) !important;
+    border-bottom: 1px solid #009dd8;
+  }
 }
 
-@media screen and (max-width: 992px)  {
-
+@media screen and (max-width: 992px) {
   .frt-mng-das {
-	.frt-das-port, .frt-das-port-cen  { margin-right: 0px !important; }
-	
+    .frt-das-port,
+    .frt-das-port-cen {
+      margin-right: 0px !important;
+    }
   }
-	
 }
 
 mat-grid-tile {
-    background: lightblue;
-  }
+  background: lightblue;
+}
 
 .title-class {
-    color: blue;
+  color: blue;
 }
 
-table{
-    width: 100%;
-   }
+table {
+  width: 100%;
+}
 
 .mat-column-count {
-    flex: 0 0 20%;
-    width: 20% !important;
+  flex: 0 0 20%;
+  width: 20% !important;
 }
 .mat-column-countSLA {
-    flex: 0 0 20%;
-    width: 20% !important;
+  flex: 0 0 20%;
+  width: 20% !important;
 }
 .mat-column-countOSLA {
-    flex: 0 0 20%;
-    width: 20% !important;
+  flex: 0 0 20%;
+  width: 20% !important;
 }
+
+.mat-expansion-panel {
+  height: 300px;
+  overflow: auto;
+  top: 0;
+}
+
+
+
