table report in lcl details

--- a/frontend/dashboard/src/app/export-lcl/export-lcl.component.scss
+++ b/frontend/dashboard/src/app/export-lcl/export-lcl.component.scss
@@ -1,15 +1,17 @@
+//  html, body {
+//   height: 100%;
+//  }
+ 
+//  body{
+//   margin: 0;
+//  }
+ 
+//  .mat-table {
+//     width: 100%;
+//     overflow: auto;
+//     max-height: 500px; /* Adjust as needed */
+//   }
+
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 10px;
-  }
-  
-  th, td {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
+  width: 100%;
+}
