--- a/frontend/dashboard/src/app/export-lcl/export-lcl.component.html
+++ b/frontend/dashboard/src/app/export-lcl/export-lcl.component.html
@@ -1,42 +1,52 @@
-<table mat-table [dataSource]="datasource_export_lcl_details" class="mat-elevation-z8">
-  <!-- Define your columns -->
-  <ng-container matColumnDef="column1">
-    <th mat-header-cell *matHeaderCellDef>Department</th>
-    <td mat-cell *matCellDef="let element">{{ element.dept }}</td>
-  </ng-container>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="export_lcl_details">
+    <!-- Position Column -->
+    <ng-container matColumnDef="Department">
+      <th mat-header-cell *matHeaderCellDef>Department</th>
+      <td mat-cell *matCellDef="let element">{{ element.dept }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="column2">
-    <th mat-header-cell *matHeaderCellDef>Product</th>
-    <td mat-cell *matCellDef="let element">{{ element.product }}</td>
-  </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="Product">
+      <th mat-header-cell *matHeaderCellDef>Product</th>
+      <td mat-cell *matCellDef="let element">{{ element.product }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="column3">
-    <th mat-header-cell *matHeaderCellDef>Action</th>
-    <td mat-cell *matCellDef="let element">{{ element.action }}</td>
-  </ng-container>
+    <!-- Weight Column -->
+    <ng-container matColumnDef="Action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element">{{ element.action }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="column4">
-    <th mat-header-cell *matHeaderCellDef>Reference Number</th>
-    <td mat-cell *matCellDef="let element">{{ element.ref_no }}</td>
-  </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Reference Number">
+      <th mat-header-cell *matHeaderCellDef>Reference Number</th>
+      <td mat-cell *matCellDef="let element">{{ element.ref_no }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="column5">
-    <th mat-header-cell *matHeaderCellDef>Reference Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.ref_date }}</td>
-  </ng-container>
+    <ng-container matColumnDef="Reference Date">
+      <th mat-header-cell *matHeaderCellDef>Reference Number</th>
+      <td mat-cell *matCellDef="let element">{{ element.ref_date }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="column6">
-    <th mat-header-cell *matHeaderCellDef>Reference Type</th>
-    <td mat-cell *matCellDef="let element">{{ element.ref_type }}</td>
-  </ng-container>
+    <ng-container matColumnDef="Reference Type">
+      <th mat-header-cell *matHeaderCellDef>Reference Type</th>
+      <td mat-cell *matCellDef="let element">{{ element.ref_type }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="column7">
-    <th mat-header-cell *matHeaderCellDef>Reference Mode</th>
-    <td mat-cell *matCellDef="let element">{{ element.ref_mode }}</td>
-  </ng-container>
+    <ng-container matColumnDef="Reference Mode">
+      <th mat-header-cell *matHeaderCellDef>Reference Mode</th>
+      <td mat-cell *matCellDef="let element">{{ element.ref_mode }}</td>
+    </ng-container>
 
-  <!-- Add more columns as needed -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+    aria-label="Select page of periodic elements"
+  >
+  </mat-paginator>
+</div>
