--- a/frontend/dashboard/src/app/export-lcl/export-lcl.component.html
+++ b/frontend/dashboard/src/app/export-lcl/export-lcl.component.html
@@ -1,40 +1,40 @@
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="export_lcl_details">
+  <table mat-table [dataSource]="dataSource">
     <!-- Position Column -->
-    <ng-container matColumnDef="Department">
+    <ng-container matColumnDef="dept">
       <th mat-header-cell *matHeaderCellDef>Department</th>
       <td mat-cell *matCellDef="let element">{{ element.dept }}</td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="Product">
+    <ng-container matColumnDef="product">
       <th mat-header-cell *matHeaderCellDef>Product</th>
       <td mat-cell *matCellDef="let element">{{ element.product }}</td>
     </ng-container>
 
     <!-- Weight Column -->
-    <ng-container matColumnDef="Action">
+    <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">{{ element.action }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="Reference Number">
+    <ng-container matColumnDef="ref_no">
       <th mat-header-cell *matHeaderCellDef>Reference Number</th>
       <td mat-cell *matCellDef="let element">{{ element.ref_no }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="Reference Date">
+    <ng-container matColumnDef="ref_date">
       <th mat-header-cell *matHeaderCellDef>Reference Number</th>
       <td mat-cell *matCellDef="let element">{{ element.ref_date }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="Reference Type">
+    <ng-container matColumnDef="ref_type">
       <th mat-header-cell *matHeaderCellDef>Reference Type</th>
       <td mat-cell *matCellDef="let element">{{ element.ref_type }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="Reference Mode">
+    <ng-container matColumnDef="ref_mode">
       <th mat-header-cell *matHeaderCellDef>Reference Mode</th>
       <td mat-cell *matCellDef="let element">{{ element.ref_mode }}</td>
     </ng-container>
