api integration in lcl report

--- a/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.html
@@ -19,7 +19,7 @@
                     <mat-expansion-panel [expanded]="true">
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          IMPORT Sales Support
+                          Sales Support
                         </mat-panel-title>
                       </mat-expansion-panel-header>
 
@@ -59,7 +59,7 @@
                     <mat-expansion-panel [expanded]="true">
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          IMPORT CUSTOMER SERVICE (LCL)
+                          Customer Service (LCL)
                         </mat-panel-title>
                       </mat-expansion-panel-header>
                       <mat-table [dataSource]="datasource_export_LCL_CS">
@@ -123,7 +123,7 @@
                     <mat-expansion-panel [expanded]="true">
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          IMPORT CUSTOMER SERVICE (FCL)
+                          Customer Service (FCL)
                         </mat-panel-title>
                       </mat-expansion-panel-header>
                       <mat-divider></mat-divider>
@@ -186,7 +186,7 @@
                     <mat-expansion-panel [expanded]="true">
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          IMPORT DOCUMENTATION
+                          Documentation
                         </mat-panel-title>
                       </mat-expansion-panel-header>
                       <mat-table [dataSource]="dataSource3">
