--- a/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
@@ -22,7 +22,7 @@
                     >
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          EXPORT Sales Support
+                          Sales Support
                         </mat-panel-title>
                       </mat-expansion-panel-header>
 
@@ -59,14 +59,14 @@
 
                   <div class="col-md-6 mb-4">
                     <!--<mat-accordion class="example-headers-align" multi>-->
-                      
+
                     <mat-expansion-panel
                       [expanded]="true"
                       *ngIf="isRoleMatching(1)"
                     >
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          EXPORT CUSTOMER SERVICE (LCL)
+                          Customer Service (LCL)
                         </mat-panel-title>
                       </mat-expansion-panel-header>
                       <mat-table [dataSource]="datasource_export_LCL_CS">
@@ -80,10 +80,20 @@
                         </ng-container>
 
                         <ng-container matColumnDef="count">
-                          <mat-header-cell *matHeaderCellDef>Count</mat-header-cell>
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
                           <mat-cell *matCellDef="let element">
                             <!-- Add click event and pass the action value to the function -->
-                            <a href="javascript:void(0);" (click)="get_export_lcl_details_navigation(element.action)">{{ element.count }}</a>
+                            <a
+                              href="javascript:void(0);"
+                              (click)="
+                                get_export_lcl_details_navigation(
+                                  element.action
+                                )
+                              "
+                              >{{ element.count }}</a
+                            >
                           </mat-cell>
                         </ng-container>
 
@@ -91,22 +101,37 @@
                           <mat-header-cell *matHeaderCellDef
                             >Within SLA</mat-header-cell
                           >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/landing">{{
-                              element.withinSLA
-                            }}</a></mat-cell
-                          >
+                          <mat-cell *matCellDef="let element">
+                            <a
+                              href="javascript:void(0);"
+                              (click)="
+                                get_export_lcl_details_Withinsla_navigation(
+                                  element.action,
+                                  element.withinSLA
+                                )
+                              "
+                              >{{ element.withinSLA }}</a
+                            >
+                          </mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="countOSLA">
                           <mat-header-cell *matHeaderCellDef>
                             Out of SLA</mat-header-cell
                           >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/landing">{{
-                              element.outOfSLA
-                            }}</a></mat-cell
-                          >
+                          <mat-cell *matCellDef="let element">
+                            <a
+                              href="javascript:void(0);"
+                              (click)="
+                                get_export_lcl_details_OutOfSla_navigation(
+                                  element.action,
+                                  element.withinSLA,
+                                  element.outOfSLA
+                                )
+                              "
+                              >{{ element.outOfSLA }}</a
+                            >
+                          </mat-cell>
                         </ng-container>
 
                         <mat-header-row
@@ -130,7 +155,7 @@
                     >
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          EXPORT CUSTOMER SERVICE (FCL)
+                          Customer Service (FCL)
                         </mat-panel-title>
                       </mat-expansion-panel-header>
                       <mat-divider></mat-divider>
@@ -196,10 +221,12 @@
                     >
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          EXPORT DOCUMENTATION
+                          Documentation
                         </mat-panel-title>
                       </mat-expansion-panel-header>
-                      <mat-table [dataSource]="datasource_export_Documentation_CS">
+                      <mat-table
+                        [dataSource]="datasource_export_Documentation_CS"
+                      >
                         <ng-container matColumnDef="pendinActions">
                           <mat-header-cell *matHeaderCellDef
                             >Pending Actions</mat-header-cell
@@ -213,11 +240,18 @@
                           <mat-header-cell *matHeaderCellDef
                             >Count</mat-header-cell
                           >
-                          <mat-cell *matCellDef="let element"
-                            ><a href="/landing">{{
-                              element.count
-                            }}</a></mat-cell
-                          >
+                          <mat-cell *matCellDef="let element">
+                            <!-- Add click event and pass the action value to the function -->
+                            <a
+                              href="javascript:void(0);"
+                              (click)="
+                                get_export_Documentation_Count_details_navigation(
+                                  element.action
+                                )
+                              "
+                              >{{ element.count }}</a
+                            >
+                          </mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="countSLA">
@@ -258,7 +292,7 @@
                     >
                       <mat-expansion-panel-header>
                         <mat-panel-title class="title-class">
-                          EXPORT Planner
+                          Planner
                         </mat-panel-title>
                       </mat-expansion-panel-header>
                       <mat-table [dataSource]="datasource_export_Planner_CS">
@@ -322,5 +356,3 @@
   </div>
   <!--</div>-->
 </div>
-
-
