--- a/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
@@ -79,13 +79,13 @@
                           }}</mat-cell>
                         </ng-container>
 
-                        <ng-container matColumnDef="count">
+                        <!-- <ng-container matColumnDef="count">
                           <mat-header-cell *matHeaderCellDef
                             >Count</mat-header-cell
                           >
-                          <mat-cell *matCellDef="let element">
-                            <!-- Add click event and pass the action value to the function -->
-                            <a
+                          <mat-cell *matCellDef="let element"> -->
+                        <!-- Add click event and pass the action value to the function -->
+                        <!-- <a
                               href="javascript:void(0);"
                               (click)="
                                 get_export_lcl_details_navigation(
@@ -95,9 +95,34 @@
                               >{{ element.count }}</a
                             >
                           </mat-cell>
+                        </ng-container> -->
+
+                        <ng-container matColumnDef="count">
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.count > 0; else noData"
+                            >
+                              <!-- Display count and provide click event if count is greater than 0 -->
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_lcl_details_navigation(
+                                    element.action
+                                  )
+                                "
+                              >
+                                {{ element.count }}
+                              </a>
+                            </ng-container>
+                            <!-- If count is 0, display 'No data found' message -->
+                            <ng-template #noData> No data found </ng-template>
+                          </mat-cell>
                         </ng-container>
 
-                        <ng-container matColumnDef="countSLA">
+                        <!-- <ng-container matColumnDef="countSLA">
                           <mat-header-cell *matHeaderCellDef
                             >Within SLA</mat-header-cell
                           >
@@ -113,9 +138,60 @@
                               >{{ element.withinSLA }}</a
                             >
                           </mat-cell>
+                        </ng-container> -->
+
+                        <ng-container matColumnDef="countSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Within SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.withinSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_lcl_details_Withinsla_navigation(
+                                    element.action,
+                                    element.withinSLA
+                                  )
+                                "
+                                >{{ element.withinSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound
+                              >No data found</ng-template
+                            >
+                          </mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.outOfSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_lcl_details_OutOfSla_navigation(
+                                    element.action,
+                                    element.withinSLA,
+                                    element.outOfSLA
+                                  )
+                                "
+                                >{{ element.outOfSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound
+                              >No data found</ng-template
+                            >
+                          </mat-cell>
+                        </ng-container>
+
+                        <!-- <ng-container matColumnDef="countOSLA">
                           <mat-header-cell *matHeaderCellDef>
                             Out of SLA</mat-header-cell
                           >
@@ -132,7 +208,7 @@
                               >{{ element.outOfSLA }}</a
                             >
                           </mat-cell>
-                        </ng-container>
+                        </ng-container> -->
 
                         <mat-header-row
                           *matHeaderRowDef="displayedColumnsSLA"
@@ -320,6 +396,144 @@
                           }}</mat-cell>
                         </ng-container>
 
+                        <!-- <ng-container matColumnDef="count">
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/landing">{{
+                              element.count
+                            }}</a></mat-cell
+                          >
+                        </ng-container> -->
+
+                        <ng-container matColumnDef="count">
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.count > 0; else noData"
+                            >
+                              <!-- Display count and provide click event if count is greater than 0 -->
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_planner_Count_details_navigation(
+                                    element.action
+                                  )
+                                "
+                              >
+                                {{ element.count }}
+                              </a>
+                            </ng-container>
+                            <!-- If count is 0, display 'No data found' message -->
+                            <ng-template #noData> No data found </ng-template>
+                          </mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="countSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Within SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.withinSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_planner_details_Withinsla_navigation(
+                                    element.action,
+                                    element.withinSLA
+                                  )
+                                "
+                                >{{ element.withinSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound
+                              >No data found</ng-template
+                            >
+                          </mat-cell>
+                        </ng-container>
+
+                        <!-- <ng-container matColumnDef="countSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Within SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/landing">{{
+                              element.withinSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container> -->
+
+                        <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.outOfSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_planner_details_OutOfSla_navigation(
+                                    element.action,
+                                    element.withinSLA,
+                                    element.outOfSLA
+                                  )
+                                "
+                                >{{ element.outOfSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound
+                              >No data found</ng-template
+                            >
+                          </mat-cell>
+                        </ng-container>
+                        <!-- 
+                        <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef>
+                            Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/landing">{{
+                              element.outOfSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container> -->
+                        <mat-header-row
+                          *matHeaderRowDef="displayedColumnsSLA"
+                        ></mat-header-row>
+                        <mat-row
+                          *matRowDef="let row; columns: displayedColumnsSLA"
+                        ></mat-row>
+                      </mat-table>
+                    </mat-expansion-panel>
+                  </div>
+                  <div class="col-md-6 mb-4">
+                    <!-- <mat-accordion>-->
+                    <mat-expansion-panel
+                      [expanded]="true"
+                      *ngIf="isRoleMatching(4)"
+                    >
+                      <mat-expansion-panel-header>
+                        <mat-panel-title class="title-class">
+                          B/L release desk
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      <mat-table [dataSource]="dataSource1">
+                        <ng-container matColumnDef="pendinActions">
+                          <mat-header-cell *matHeaderCellDef
+                            >Pending Actions</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">{{
+                            element.action
+                          }}</mat-cell>
+                        </ng-container>
+
                         <ng-container matColumnDef="count">
                           <mat-header-cell *matHeaderCellDef
                             >Count</mat-header-cell
@@ -348,7 +562,7 @@
                           >
                           <mat-cell *matCellDef="let element"
                             ><a href="/landing">{{
-                              element.outOfSLA
+                              element.outofSLA
                             }}</a></mat-cell
                           >
                         </ng-container>
