--- a/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-import-dashboard/sea-import-dashboard.component.html
@@ -116,7 +116,7 @@
                     <!--</mat-accordion> -->
                   </div>
                 </div>
-                <div class="col-lg-12"></div>
+                <!-- <div class="col-lg-12"></div> -->
                 <div class="row">
                   <div class="col-md-6 mb-4">
                     <!--<mat-accordion>-->
@@ -228,6 +228,183 @@
                           <mat-cell *matCellDef="let element"
                             ><a href="/sea-export">{{
                               element.countOSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+                        <mat-header-row
+                          *matHeaderRowDef="displayedColumnsSLA"
+                        ></mat-header-row>
+                        <mat-row
+                          *matRowDef="let row; columns: displayedColumnsSLA"
+                        ></mat-row>
+                      </mat-table>
+                    </mat-expansion-panel>
+                  </div>
+                  <div class="col-md-6 mb-4">
+                    <!-- <mat-accordion>-->
+                    <mat-expansion-panel [expanded]="true">
+                      <mat-expansion-panel-header>
+                        <mat-panel-title class="title-class">
+                          Transhipment Desk
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      <mat-table [dataSource]="dataSource4">
+                        <ng-container matColumnDef="pendinActions">
+                          <mat-header-cell *matHeaderCellDef
+                            >Pending Actions</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">{{
+                            element.name
+                          }}</mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="count">
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.count
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+
+                        <ng-container matColumnDef="countSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Within SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.countSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+
+                        <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.outofSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+                        <mat-header-row
+                          *matHeaderRowDef="displayedColumnsSLA"
+                        ></mat-header-row>
+                        <mat-row
+                          *matRowDef="let row; columns: displayedColumnsSLA"
+                        ></mat-row>
+                      </mat-table>
+                    </mat-expansion-panel>
+                  </div>
+                  <div class="col-md-6 mb-4">
+                    <!-- <mat-accordion>-->
+                    <mat-expansion-panel [expanded]="true">
+                      <mat-expansion-panel-header>
+                        <mat-panel-title class="title-class">
+                          CUSTOMS CLEARANCE(FCL)
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      <mat-table [dataSource]="dataSource5">
+                        <ng-container matColumnDef="pendinActions">
+                          <mat-header-cell *matHeaderCellDef
+                            >Pending Actions</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">{{
+                            element.name
+                          }}</mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="count">
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.count
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+
+                        <ng-container matColumnDef="countSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Within SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.countSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+
+                        <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.outofSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+                        <mat-header-row
+                          *matHeaderRowDef="displayedColumnsSLA"
+                        ></mat-header-row>
+                        <mat-row
+                          *matRowDef="let row; columns: displayedColumnsSLA"
+                        ></mat-row>
+                      </mat-table>
+                    </mat-expansion-panel>
+                  </div>
+                  <div class="col-md-6 mb-4">
+                    <!-- <mat-accordion>-->
+                    <mat-expansion-panel [expanded]="true">
+                      <mat-expansion-panel-header>
+                        <mat-panel-title class="title-class">
+                          CUSTOMS CLEARANCE(LCL)
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      <mat-table [dataSource]="dataSource6">
+                        <ng-container matColumnDef="pendinActions">
+                          <mat-header-cell *matHeaderCellDef
+                            >Pending Actions</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">{{
+                            element.name
+                          }}</mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="count">
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.count
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+
+                        <ng-container matColumnDef="countSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Within SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.countSLA
+                            }}</a></mat-cell
+                          >
+                        </ng-container>
+
+                        <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"
+                            ><a href="/sea-export">{{
+                              element.outofSLA
                             }}</a></mat-cell
                           >
                         </ng-container>
